k8s/shoprix.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp
          image: prameeshp/shoprix-web:latest
          resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  type: NodePort
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      NodePort: 31234
